# ekf-landmark-slam

./: CLAUDE.md  README.md
aruco_detection/: detect_aruco.py  generate_aruco_markers.py
calibration/: cam_intrinsic.py  cam_lidar_2d_icp.py  gui.py  verify_extrinsic.py
landmarks_msg/: CMakeLists.txt  package.xml
landmarks_msg/msg/: LandmarkMsg.msg  LandmarksMsg.msg
memory/: MEMORY.md  project_calibration_constants.md  project_calibration_redo.md
test_data/: calibration_parameters.txt
third_parties/turtlebot3_simulations/turtlebot3_gazebo/launch/: turutlebot3_dqn_stage5_LEKF_CYL.launch.py
turtlebot3_gazebo/launch/: turtlebot3_dqn_stage5_ArucoTag.launch.py
turtlebot3_gazebo/models/turtlebot3_dqn_world/misc/: aruco1.blend1
turtlebot3_gazebo/models/turtlebot3_dqn_world/obstacles/: model.sdf
turtlebot_landmark_slam/: CMakeLists.txt  package.xml
turtlebot_landmark_slam/config/: slam_viz.rviz
turtlebot_landmark_slam/launch/: ekf_pipeline.launch.py  simulation.launch.py  slam_bag_ekf.launch.py  slam_sim.launch.py  slam_sim_real_perception.launch.py  teleop.launch.py
turtlebot_landmark_slam/scripts/: ekf_pipeline_node.py  evaluate_map.py  generate_rviz_config.py  landmark_publisher_real.py  landmark_publisher_sim.py  map_writer.py  nees_analyzer.py  odom_to_control_republisher.py  plot_trajectory.py  teleop_custom.py
turtlebot_landmark_slam/src/turtlebot_landmark_slam/: __init__.py  dataprovider.py  ekf.py  landmarks_circle_detector.py  pipeline.py  types.py  utils.py
(+6 files in other folders)
