<?xml version="1.0"?>
<package format="3">
  <name>landmarks_msg</name>
  <version>1.0.0</version>
  <description>
    Landmark messages
  </description>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <maintainer email="chinitaberrio@gmail.com">stephany</maintainer>
  <license>BSD</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
